turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
val GAUCHE = 2
val STOP = 0
val PDV = 1
val DEMI = 4
val DROITE = 8
var state = 0

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) 
{
  var col = 0
  for (i <- 0 to colors.length-1)
  {
  	if(getCouleurSol() == colors(i))
    {
      col = i
    	}
  	}
  setCouleurBrosse(colors(rule(state)(col)(0)))
  rule(state)(col)(1) match{
    case left => gauche(); avance()
    case pdv => avance()
    case dt => droite();droite()
    case right => droite()
    avance()
  }
  state = rule(state)(col)(2)
}